@@ -1279,22 +1279,39 @@ static gboolean traverse_tree_keys(gpointer key, gpointer value UNUSED, GList **
 	*(GList **)l = g_list_append(*(GList **)l, key);
 	return FALSE;
 }
+
+static gboolean traverse_tree_keys_rev(gpointer key, gpointer value UNUSED, GList **l)
+{
+	*(GList **)l = g_list_prepend(*(GList **)l, key);
+	return FALSE;
+}
+
 static gboolean traverse_tree_values(gpointer key UNUSED, gpointer value, GList **l)
 {
 	*(GList **)l = g_list_append(*(GList **)l, value);
 	return FALSE;
 }
 
+static gboolean traverse_tree_values_rev(gpointer key UNUSED, gpointer value, GList **l)
+{
+	*(GList **)l = g_list_prepend(*(GList **)l, value);
+	return FALSE;
+}
+
+
+
 GList * g_tree_keys(GTree *tree)
 {
 	GList *l = NULL;
-	g_tree_foreach(tree, (GTraverseFunc)traverse_tree_keys, &l);
+	g_tree_foreach(tree, (GTraverseFunc)traverse_tree_keys_rev, &l);
+	g_list_reverse(l);
 	return g_list_first(l);
 }
 GList * g_tree_values(GTree *tree)
 {
 	GList *l = NULL;
-	g_tree_foreach(tree, (GTraverseFunc)traverse_tree_values, &l);
+	g_tree_foreach(tree, (GTraverseFunc)traverse_tree_values_rev, &l);
+	g_list_reverse(l);
 	return g_list_first(l);
 }
 
@@ -1347,6 +1364,28 @@ static gboolean traverse_tree_merger(gpointer key, gpointer value UNUSED, tree_m
 	return FALSE;
 }
 
+static gboolean traverse_tree_merger_rev(gpointer key, gpointer value UNUSED, tree_merger_t **merger)
+{
+	tree_merger_t *t = *(tree_merger_t **)merger;
+	GTree *tree = t->tree;
+	int condition = t->condition;
+
+	switch(condition) {
+		case IST_SUBSEARCH_NOT:
+		break;
+		
+		default:
+		case IST_SUBSEARCH_OR:
+		case IST_SUBSEARCH_AND:
+			if (! g_tree_lookup(tree,key)) 
+				(*(tree_merger_t **)merger)->list = g_list_prepend((*(tree_merger_t **)merger)->list,key);
+		break;
+	}
+
+	return FALSE;
+}
+
+
 
 int g_tree_merge(GTree *a, GTree *b, int condition)
 {
@@ -1370,7 +1409,8 @@ int g_tree_merge(GTree *a, GTree *b, int condition)
 			/* delete from A all keys not in B */
 			merger->tree = b;
 			merger->condition = IST_SUBSEARCH_AND;
-			g_tree_foreach(a,(GTraverseFunc)traverse_tree_merger, &merger);
+			g_tree_foreach(a,(GTraverseFunc)traverse_tree_merger_rev, &merger);
+			g_list_reverse(merger->list);
 			
 			keys = g_list_first(merger->list);
 			if (! g_list_length(keys))
@@ -1393,7 +1433,8 @@ int g_tree_merge(GTree *a, GTree *b, int condition)
 
 			merger->tree = a;
 			merger->condition = IST_SUBSEARCH_OR;
-			g_tree_foreach(b,(GTraverseFunc)traverse_tree_merger, &merger);
+			g_tree_foreach(b,(GTraverseFunc)traverse_tree_merger_rev, &merger);
+			g_list_reverse(merger->list);
 			keys = g_list_first(merger->list);
 		
 			/* add to A all keys in B */
