@@ -7,6 +7,11 @@
 	Removed references to TRACE_STOP.
 	* dbmail.conf:
 	Changed description of TRACE_SYSLOG config item.
+	* acl.c, db.c, dbmail-imapsession.c:
+	Fixed an uninitialized structure in the new ACL code.
+	* list.c, misc.c, dbmail-mailbox.c:
+	Accepted a patch from Matthew Sayler to prevent O(n^2) behavior
+	in the list code.
 
 2006-03-06  Paul J Stevens <paul@nfg.nl>
 
